<resources>
    <string name="app_name">Elections</string>

    <string name="party">Party</string>
    <string name="votes">Votes</string>
    <string name="elects">Elects</string>
    <string name="scrutinized">Scrt. %1\$s%%</string>

    <!-- Actions. -->
    <string name="button_more_info_content">More information.</string>
    <string name="close">Close</string>
    <string name="swap">Swap chamber</string>
    <string name="reload">Reload</string>

    <!-- Errors. -->
    <string name="something_wrong">Oops! Something went wrong.</string>
    <string name="no_internet_connection">No Internet connection.</string>
</resources>
